[package]
name = "claimer"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.98"
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust.git", version = "0.3.0" }
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
